--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Stars of Africa Backend API</h1>
+      <h1>Django Blog API</h1>
       <div class="links">
         <a href="{% url 'swagger-ui' %}">
           <button>Swagger</button>
