fix: basic changes

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>{% block title %} Blog Backend {% endblock title %}</title>
+    <title>{% block title %} IMS Backend {% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Blog API Management!" />
     <meta name="author" content="Bibek Joshi" />
@@ -23,7 +23,7 @@
       <div class="content">
         <img src="{% static 'images/logo.jpg' %}" alt="logo"/>
         <header class="header">
-          <h1>Blog API Management</h1>
+          <h1>IMS API Management</h1>
           <p class="description">
             Use the links below to access essential tools for managing and
             testing the API. Ensure you're authenticated to access restricted
