--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container">
       <div class="content">
-        <img src="{% static 'images/logo.jpg' %}" alt="logo"/>
+        <img id="logo" width="200px" src="{% static 'images/logo.png' %}" alt="logo"/>
         <header class="header">
           <h1>IMS API Management</h1>
           <p class="description">
