--- a/src/templates/user/account_verification.html
+++ b/src/templates/user/account_verification.html
@@ -519,7 +519,7 @@
                                       "
                                       >We have sent you this email in response
                                       to your request to verify your account on
-                                      Ghumante</span
+                                      IMS</span
                                     >
                                   </p>
                                   <p style="font-size: 14px; line-height: 140%">
