--- a/src/templates/user/account_verification.html
+++ b/src/templates/user/account_verification.html
@@ -532,8 +532,11 @@
                                         line-height: 25.2px;
                                         color: #666666;
                                       "
-                                      >To verify your account, please enter the
-                                      otp:
+                                    >
+                                      <span
+                                        >To verify your account, please click on
+                                        the link below:</span
+                                      >
                                     </span>
                                   </p>
                                 </div>
@@ -562,7 +565,7 @@
                               >
                                 <div align="left">
                                   <a
-                                    href="#"
+                                    href="{{ redirect_url }}"
                                     target="_blank"
                                     class="v-button"
                                     style="
@@ -582,7 +585,6 @@
                                       word-break: break-word;
                                       word-wrap: break-word;
                                       mso-border-alt: none;
-                                      letter-spacing: 10px;
                                       font-size: 14px;
                                     "
                                   >
@@ -598,8 +600,9 @@
                                           font-size: 20px;
                                           line-height: 21.6px;
                                         "
-                                        >{{otp}}</span
-                                      ></span
+                                      >
+                                        <span>Verify Account</span>
+                                      </span></span
                                     >
                                   </a>
                                 </div>
@@ -648,7 +651,8 @@
                                             line-height: 22.4px;
                                           "
                                           >Please ignore this email if you did
-                                          not request a account verification.</span
+                                          not request a account
+                                          verification.</span
                                         ></em
                                       ></span
                                     >
@@ -783,13 +787,13 @@
                                   </p>
                                   <p style="font-size: 14px; line-height: 140%">
                                     <a
-                                      href="mailto:info@bibek.com"
+                                      href="mailto:info@lazarus.com"
                                       style="
                                         color: #ecf0f1;
                                         text-decoration: none;
                                       "
                                     >
-                                      info@bibekjoshi.com
+                                      info@ims.com
                                     </a>
                                   </p>
                                   <p style="font-size: 14px; line-height: 140%">
@@ -891,7 +895,7 @@
                                             "
                                           >
                                             <a
-                                              href="https://www.facebook.com/ghumante/"
+                                              href="https://www.facebook.com/lazarus/"
                                               title="Facebook"
                                               target="_blank"
                                             >
@@ -949,7 +953,7 @@
                                             "
                                           >
                                             <a
-                                              href="https://www.youtube.com/@Ghumante"
+                                              href="https://www.youtube.com/IMS"
                                               title="Youtube"
                                               target="_blank"
                                             >
@@ -1009,7 +1013,7 @@
                                             "
                                           >
                                             <a
-                                              href="https://www.instagram.com/ghumante/"
+                                              href="https://www.instagram.com/lazarus/"
                                               title="Instagram"
                                               target="_blank"
                                             >
@@ -1067,7 +1071,7 @@
                                             "
                                           >
                                             <a
-                                              href="https://www.linkedin.com/company/ghumante/"
+                                              href="https://www.linkedin.com/company/ims/"
                                               title="LinkedIn"
                                               target="_blank"
                                             >
@@ -1143,7 +1147,7 @@
                                             line-height: 19.6px;
                                             font-size: 14px;
                                           "
-                                          >Ghumante &copy;&nbsp; All Rights
+                                          >IMS &copy;&nbsp; All Rights
                                           Reserved</span
                                         ></span
                                       ></span
